# pandoc-templated-convert

./: CHANGELOG.md  LICENSE  pandoc-templated-convert.cabal
src/: Conversion.hs  Templating.hs
